<resources>
    <string name="app_name">TugasMVP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ob_get_started">Get Started</string>


    <string name="ob_header1">Aplikasi yang dapat menampilkan profile</string>
    <string name="ob_header2">Aplikasi yang dapat menampilkan kontak </string>
    <string name="ob_header3">Aplikasi yang dapat menampilkan daftar teman </string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helo">Hello kontak</string>
    <string name="kontak">Kontak</string>
    <string name="teman">Daftar Teman</string>
    <string name="profileku">Profile</string>
    <string name="name_heroes">Hero</string>
    <string name="lorem">Lorem</string>
    <string name="nim">NIM</string>
    <string name="name">nama</string>
    <string name="kelas_teman">Kelas</string>
    <string name="telepon">Telepon </string>
    <string name="socialmedia">Social Media  </string>
    <string name="email">Email  </string>
    <string name="profile">PROFILE</string>
    <string name="kelas_if1">Kelas : IF1</string>
    <string name="nama_derin_meilham">Nama : Derin Meilham</string>
    <string name="deskripsi_diri">Deskripsi diri :</string>
    <string name="nim_10116004">NIM : 10116004</string>
    <string name="contact_profile">Contact Profile</string>
    <string name="telepon_081_234_567_890">Telepon : 081 234 567 890</string>
    <string name="social_media_twitter_derinmeilham">Social Media : [TWITTER] derinmeilham</string>
    <string name="email_derinmeilhaaaam_gmail_com">Email : derinmeilhaaaam@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="seorang_mahasiswa_yang_berkuliah_di_salah_satu_universitas_swasta_di_kota_bandung_penggemar_dengan_game">Seorang mahasiswa yang berkuliah di salah satu universitas swasta di kota Bandung. Penggemar dengan game.</string>
    <string name="ini_merupakan_tampilan_profile">INI MERUPAKAN TAMPILAN PROFILE</string>


    <string-array name="data_name">
        <item>Yusri</item>
        <item>Ary</item>
        <item>Helsan</item>
        <item>Rai</item>
    </string-array>

    <string-array name="data_nim">
        <item>10116261</item>
        <item>10116260</item>
        <item>10116263</item>
        <item>10116010</item>
    </string-array>
    <string-array name="data_kelas">
        <item>IF6</item>
        <item>IF6</item>
        <item>IF6</item>
        <item>IF1</item>
    </string-array>
    <string-array name="data_telepon">
        <item>087622456789</item>
        <item>086453623567</item>
        <item>085643567898</item>
        <item>087656765434</item>
    </string-array>
    <string-array name="data_social">
        <item>ig:yusri</item>
        <item>ig:arysugiarto10</item>
        <item>ig:helsanfirmansyah</item>
        <item>ig:rai_dilah</item>
    </string-array>
    <string-array name="data_email">
        <item>yusri@gmail.com</item>
        <item>ary@gmail.com</item>
        <item>helsan@gmail.com</item>
        <item>rai@gmail.com</item>
    </string-array>




</resources>
