<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="174dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/fotoprofil"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:padding="5dp"
            android:text="@string/nim_10116004"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="5dp"
            android:text="@string/nama_derin_meilham"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/kelas_if1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"

            android:padding="5dp"
            android:text="@string/deskripsi_diri"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="131dp"
            android:layout_marginRight="16dp"
            android:text="@string/seorang_mahasiswa_yang_berkuliah_di_salah_satu_universitas_swasta_di_kota_bandung_penggemar_dengan_game"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp" />
    </LinearLayout>
    </LinearLayout>

</FrameLayout>